# IAyuGram-server

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
deploy/: add-account.sh  iayugram-server.service  setup-ubuntu.sh
scripts/: friend_extract_session.py  login.py  login_debug.py  tdata_to_session.py
src/iayugram_server/: __init__.py  __main__.py  api.py  capture.py  config.py  crypto.py  db.py  models.py
